--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,10 @@ runtime: go115
 
 instance_class: F2
 
+env_variables:
+  WEB_SUFFIX: ".01.plus"
+  GIN_MODE: release
+
 handlers:
 - url: /.*
   script: auto
