--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ runtime: go115
 instance_class: F2
 
 env_variables:
-  WEB_SUFFIX: ".web.01.plus"
+  WEB_SUFFIX: ".www.01.plus"
   GIN_MODE: release
 
 handlers:
